--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>  
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />   
-    <title>골프존 광고센터</title>    
+    <title>골프존 광1고센터</title>    
     <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]--> 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/style.js"></script>
