--- a/sub/addzone/addzone.html
+++ b/sub/addzone/addzone.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="../../css/sub.css?v=1.0">
 </head>
 <body>  
+<script>
+jQuery(function($){
+    location.href = '/main.html';
+})
+</script>
     <div id="wrap">
         <div class="header_wrap_on nav_on">
             <div class="util_nav_wrap">
@@ -29,7 +34,7 @@
                         <ul>
                             <li><a href="../screen/practice.html">스크린 광고</a></li>
                             <li><a href="../eventship/event.html">이벤트/대회 스폰서십</a></li>
-                            <li><a href="../golfzon/web.html">골프존닷컴</a></li>
+                            <li><a href="../golfzon/app.html">골프존닷컴</a></li>
                             <li><a href="../marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
                             <li><a href="../addzone/addzone.html" style="font-weight:bold;color:#f3982a">광고지면</a></li>
                             <li><a href="../partnership/partnership.html">골프장 제휴</a></li>
@@ -53,7 +58,7 @@
                     </div>
                     <div class="nav3_on">
                         <ul class="nav3_on">
-                            <li><a href="../golfzon/web.html">Web 광고</a></li>
+                            <!-- <li><a href="../golfzon/web.html">Web 광고</a></li> -->
                             <li><a href="../golfzon/app.html">APP 광고</a></li>
                         </ul>
                     </div>
