--- a/sub/partnership/partnership.html
+++ b/sub/partnership/partnership.html
@@ -29,9 +29,9 @@
                         <ul>
                             <li><a href="../screen/practice.html">스크린 광고</a></li>
                             <li><a href="../eventship/event.html">이벤트/대회 스폰서십</a></li>
-                            <li><a href="../golfzon/web.html">골프존닷컴</a></li>
+                            <li><a href="../golfzon/app.html">골프존닷컴</a></li>
                             <li><a href="../marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
-                            <li><a href="../addzone/addzone.html">광고지면</a></li>
+                            <!-- <li><a href="../addzone/addzone.html">광고지면</a></li> -->
                             <li><a href="../partnership/partnership.html" style="font-weight:bold;color:#f3982a">골프장 제휴</a></li>
                         </ul>
                     </div>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="nav3_on">
                         <ul class="nav3_on">
-                            <li><a href="../golfzon/web.html">Web 광고</a></li>
+                            <!-- <li><a href="../golfzon/web.html">Web 광고</a></li> -->
                             <li><a href="../golfzon/app.html">APP 광고</a></li>
                         </ul>
                     </div>
@@ -90,6 +90,10 @@
                     .tab4_content{margin-top:120px !important}
                     .sub_title{margin-bottom:110px}
                     .sub_title h2{line-height:62px;}
+                    .sub_title h2.tt{font-weight: 300;}
+                    .sub_title h2.tt strong{
+                        font-weight: 700;
+                    }
                     .sub_title span{line-height:35px;}
                     h2{font-size:46px;font-weight:bold;line-height:62px;}
                     h3{font-size:30px;color:#252525;font-weight:bold;}
@@ -98,8 +102,10 @@
                 <div id="tab1" class="tab_content current">
                     <div class="tab1_content">
                         <div class="sub_title">
-                            <h2>골프존은 골프장을 홍보하는 가장 확실한 매체입니다.<br />
-                                <span style="font-size:35px;color:#000">골프장 내장객 증가로 이어질 수 있도록 다양한 마케팅 솔루션을 제공합니다.</span></h2>
+                            <h2 class="tt">
+                                성장하고 있는 <strong style="color: #006eb7;">골프 산업 중심</strong>에 <strong style="color: #006eb7;">골프존</strong>이 있습니다. <br>
+                                <strong style="color: #006eb7;">골프존</strong>은 골프장을 홍보하는 <strong style="color: #006eb7;">가장 확실한 매체</strong> 입니다.
+                            </h2>
                         </div>
                         <div class="partnership_info_wrap">
                             <h3><span>01</span>국내 최다 골퍼 회원수 보유</h3>
