--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>  
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />   
-    <title>골프존 광고센터test</title>    
+    <title>골프존 광고센터</title>    
     <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]--> 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/style.js"></script>
@@ -21,7 +21,9 @@
                     <ul>
                         <li><a href="./sub/cs/faq.html">FAQ</a></li>
                         <li><a href="https://www.golfzon.com/customer/inquiry/advertisement" target="_blank">문의하기</a></li>
+                        <li><a href="https://www.golfzon.com/customer/inquiry/advertisement" target="_blank">모바일 광고 문의하기</a></li>
                         <li><a href="http://adcenter.golfzon.com/file/golfzon_introduce_202103.pdf" target="_blank">매체소개서<img src="images/main/ico_util_menu_off.png" alt="소개서 다운로드" /></a></li>
+                        <li><a href="http://adcenter.golfzon.com/file/golfzon_introduce_202103.pdf" target="_blank">모바일 매체소개서<img src="images/main/ico_util_menu_off.png" alt="소개서 다운로드" /></a></li>
                     </ul>
                 </div>
             </div>
@@ -34,7 +36,7 @@
                             <li><a href="./sub/eventship/event.html">이벤트/대회 스폰서십</a></li>
                             <li><a href="./sub/golfzon/web.html">골프존닷컴</a></li>
                             <li><a href="./sub/marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
-                            <li><a href="./sub/addzone/addzone.html">광고지면</a></li>
+                            <!-- <li><a href="./sub/addzone/addzone.html">광고지면</a></li> -->
                             <li><a href="./sub/partnership/partnership.html">골프장 제휴</a></li>
                         </ul>
                     </div>
@@ -58,9 +60,9 @@
                         <ul>
                             <li><a href="./sub/screen/practice.html">스크린 광고</a></li>
                             <li><a href="./sub/eventship/event.html">이벤트/대회 스폰서십</a></li>
-                            <li><a href="./sub/golfzon/web.html">골프존닷컴</a></li>
+                            <li><a href="./sub/golfzon/app.html">골프존닷컴</a></li>
                             <li><a href="./sub/marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
-                            <li><a href="./sub/addzone/addzone.html">광고지면</a></li>
+                            <!-- <li><a href="./sub/addzone/addzone.html">광고지면</a></li> -->
                             <li><a href="./sub/partnership/partnership.html">골프장 제휴</a></li>
                         </ul>
                     </div>
@@ -82,7 +84,7 @@
                     </div>
                     <div class="nav3_on">
                         <ul class="nav3_on">
-                            <li><a href="./sub/golfzon/web.html">Web 광고</a></li>
+                            <!-- <li><a href="./sub/golfzon/web.html">Web 광고</a></li> -->
                             <li><a href="./sub/golfzon/app.html">APP 광고</a></li>
                         </ul>
                     </div>
@@ -94,19 +96,19 @@
             <div class="slide_wrap" style="position:relative;">
                 <div class="swiper-container_top">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-111.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
+                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-1.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
                             <p>전국 6500여 매장 3만여<br />골프존 시뮬레이터&스크린</p>
                             <p>골프존 인프라는 여러분의 광고를<br />보다 빠르고 효과적으로 확산시켜드립니다.</p>
                         </div>
                       </div>
-                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-222.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
+                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-2.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
-                            <p>경제력이 높은 3050 타겟<br />이용횟수 매일 164,383 라운드</p>
-                            <p>골프존의 프리미엄 타겟은 언제든<br />여러분의 제품과 서비스를 경험할 준비가 되어있습니다.</p>
+                            <p style="margin-top: 20px">경제력이 높은 3050 타겟<br />이용횟수 매일 215,839회(RND)<br><em style="font-size: 14px;line-height: 20px;">*2021년 기준</em></p>
+                            <p style="margin-top: 10px">골프존의 프리미엄 타겟은 언제든<br />여러분의 제품과 서비스를 경험할 준비가 되어있습니다.</p>
                         </div>
                       </div>
-                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-333.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
+                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-3.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
                             <p>업계 최고 수준의 몰입감을 제공,<br />성장하고 있는 골프존</p>
                             <p>한정된 공간에서 대형화면을 통해<br />게임의 중요한 순간마다 몰입감 높은 광고를 제공합니다.</p>
@@ -146,62 +148,67 @@
                     <div class="ad6_list">
                         <div>
                             <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
-                                <img src="images/main/img_ad1.png" alt="재규어 랜드로버" />
+                                <img src="images/main/main_img_ad1.jpg" alt="골든블루" />
                             </a>
-                            <h3>재규어 랜드로버</h3>
-                            <p>#CRM</p>
-                            <p>#LMS</p>
+                            <h3>골든블루</h3>
+                            <p>#스크린광고</p>
+                            <p>#홀이동광고</p>
+                            <p>#GTOUR 인비테이셔널</p>
                         </div>
                         <div>
                             <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
-                                <img src="images/main/img_ad2.png" alt="하이트 진로" />
-                            </a>
-                            <h3>하이트 진로</h3>
-                            <p>#배틀존</p>
-                            <p>#오브젝트 이벤트</p>
-                            <p>#브랜드 커뮤니케이션</p>
-                            <p>#매장 홍보 포스터</p>
-                        </div>
-                        <div>
-                            <a href="sub/marketingsolution/marketing.html#e2" class="innerborder">
-                                <img src="images/main/img_ad3.png" alt="KGC 인삼공사" />
-                            </a>
-                            <h3>KGC 인삼공사</h3>
-                            <p>#신제품 샘플링</p>
-                            <p>#룰렛버디</p>
-                            <p>#코스브랜딩</p>
-                            <p>#회원참여형 이벤트</p>
-                        </div>
-                    </div>
-                    <div class="ad6_list">
-                        <div>
-                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
-                                <img src="images/main/img_ad4.png" alt="삼성증권" />
-                            </a>
-                            <h3>삼성증권</h3>
-                            <p>#퍼포먼스</p>  
-                            <p>#스페셜 친구</p>
-                            <p>#GTOUR MENS</p>
-                            <p>#비대면 계좌 개설 이벤트</p>
-                        </div>
-                        <div>
-                            <a href="sub/marketingsolution/marketing.html#e2" class="innerborder">
-                                <img src="images/main/img_ad5.png" alt="카버 코리아" />
-                            </a>
-                            <h3>카버 코리아</h3>
-                            <p>#스크린골프존</p>
-                            <p>#브랜드퍼포먼스</p>
-                            <p>#GDR아카데미</p>
-                        </div>
-                        <div>
-                            <a href="sub/marketingsolution/marketing.html#e3" class="innerborder">
-                                <img src="images/main/img_ad6.png" alt="석교상사" />
+                                <img src="images/main/main_img_ad2.jpg" alt="석교상사" />
                             </a>
                             <h3>석교상사</h3>
                             <p>#스크린광고</p>
                             <p>#홀이동광고</p>
                             <p>#GDR광고</p>
                             <p>#스크린골프존TVC</p>
+                        </div>
+                        <div>
+                            <a href="sub/marketingsolution/marketing.html#e2" class="innerborder">
+                                <img src="images/main/main_img_ad3.jpg" alt="하이트진로" />
+                            </a>
+                            <h3>하이트진로</h3>
+                            <p>#배틀존</p>
+                            <p>#브랜드커뮤니케이션</p>
+                            <p>#오브젝트이벤트</p>
+                            <p>#매장홍보포스터</p>
+                        </div>
+                    </div>
+                    <div class="ad6_list">
+                        <div>
+                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
+                                <img src="images/main/main_img_ad4.jpg" alt="신한투자증권" />
+                            </a>
+                            <h3>신한투자증권</h3>
+                            <p>#기업 PR</p>
+                            <p>#기업네이밍 코스 제작</p>
+                            <p>#기업 코스 내 이벤트 진행</p>
+                            <p>#글로벌 대회 진행</p>
+                            <p>#GTOUR MEN'S</p>
+                            <p>#이벤트&퍼포먼스</p>
+                        </div>
+                        <div>
+                            <a href="sub/marketingsolution/marketing.html#e2" class="innerborder">
+                                <img src="images/main/main_img_ad5.jpg" alt="던롭스포츠" />
+                            </a>
+                            <h3>던롭스포츠</h3>
+                            <p>#모바일광고</p>
+                            <p>#앱광고</p>
+                            <p>#스크린로그인</p>
+                            <p>#연간계약</p>
+                        </div>
+                        <div>
+                            <a href="sub/marketingsolution/marketing.html#e3" class="innerborder">
+                                <img src="images/main/main_img_ad6.jpg" alt="한화생명보험" />
+                            </a>
+                            <h3>한화생명보험</h3>
+                            <p>#모바일광고</p>
+                            <p>#앱광고</p>
+                            <p>#전면팝업</p>
+                            <p>#홈메인</p>
+                            <p>#라이프플러스</p>
                         </div>
                     </div>
                     <script>
