--- a/sub/golfzon/app.html
+++ b/sub/golfzon/app.html
@@ -29,9 +29,9 @@
                         <ul>
                             <li><a href="../screen/practice.html">스크린 광고</a></li>
                             <li><a href="../eventship/event.html">이벤트/대회 스폰서십</a></li>
-                            <li><a href="../golfzon/web.html" style="font-weight:bold;color:#f3982a">골프존닷컴</a></li>
+                            <li><a href="../golfzon/app.html" style="font-weight:bold;color:#f3982a">골프존닷컴</a></li>
                             <li><a href="../marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
-                            <li><a href="../addzone/addzone.html">광고지면</a></li>
+                            <!-- <li><a href="../addzone/addzone.html">광고지면</a></li> -->
                             <li><a href="../partnership/partnership.html">골프장 제휴</a></li>
                         </ul>
                     </div>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="nav3_on">
                         <ul class="nav3_on">
-                            <li><a href="../golfzon/web.html">Web 광고</a></li>
+                            <!-- <li><a href="../golfzon/web.html">Web 광고</a></li> -->
                             <li><a href="../golfzon/app.html" style="font-weight:bold;color:#f3982a">APP 광고</a></li>
                         </ul>
                     </div>
@@ -79,17 +79,21 @@
                 </div>
                 <div class="sub_tab_menu">
                     <ul>
-                        <li data-id="tab1" class="on">전면 배너</li>
-                        <li data-id="tab2">메인 중앙</li>
-                        <li data-id="tab3">이벤트 리스트</li>
-                        <li data-id="tab4">이벤트 페이지</li>
+                        <li data-id="tab1" class="on">전면팝업</li>
+                        <li data-id="tab2">홈 메인 중앙</li>
+                        <li data-id="tab3">스크린 메인 중앙</li>
+                        <li data-id="tab4">필드 메인 중앙</li>
+                        <li data-id="tab5">스크린 로그인 스킨</li>
+                        <li data-id="tab6">모바일 푸시+이벤트 페이지</li>
                     </ul>
                 </div>
                 <style>
-                    .sub_tab_menu li{line-height:24px;float:left;display:inline-block;width:24.5%;text-align:center;border-top:1px solid #dbdbdb;border-bottom:1px solid #dbdbdb;border-right:1px solid #dbdbdb;padding:30px 0;font-size:18px;cursor: pointer;color:#222}
+                    .sub_tab_menu li{line-height:24px;float:left;display:inline-block;width:16%;text-align:center;border-top:1px solid #dbdbdb;border-bottom:1px solid #dbdbdb;border-right:1px solid #dbdbdb;padding:30px 0;font-size:18px;cursor: pointer;color:#222}
                     .tab1_content{margin-top:85px}
                     .practice_info_wrap{width:935px;margin:90px auto 0 auto}
                     .practice_info_wrap dl{width:33%;text-align:center;padding:0;border-right:1px solid #d7dde9;height:50px;padding:20px 0}
+                    .practice_info_wrap.w50{display: flex;align-items: center;}
+                    .practice_info_wrap.w50 dl{width: 50%;}
                     .practice_info_wrap dt{width:100%;color:#000;text-decoration:none;line-height:28px;}
                     .practice_info_wrap dt img{margin-right:10px;}
                     .practice_info_wrap dd{margin-top:10px;margin-left:20px}
@@ -98,13 +102,16 @@
                 </style>
                 <div id="tab1" class="tab_content current">
                     <div class="tab1_content">
-                        <h3>전면 배너</h3>
+                        <h3>전면팝업</h3>
                         <div class="movie_wrap" style="overflow:hidden;text-align:center;height:auto">
-                            <img src="../../images/sub/img_golfzon_9.png" alt="전면 배너" />
+                            <img src="../../images/sub/img_app1.jpg" alt="전면팝업" />
                         </div>
-                        <div class="practice_info_wrap" style="width:100%">
-                            <dl style="width:100%">
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />별도 협의 필요</dt>
+                        <div class="practice_info_wrap w50">
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />4주 2,000만원 / 10일 1,000만원</dt>
+                            </dl>
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />CTR 3.0% (23년 1-2월 기준)</dt>
                             </dl>
                         </div>
                     </div>
@@ -112,43 +119,84 @@
                 <!--// tab1 -->
                 <div id="tab2" class="tab_content">
                     <div class="tab1_content">
-                        <h3>메인 중앙</h3>
+                        <h3>홈 메인 중앙</h3>
                         <div class="movie_wrap" style="overflow:hidden;text-align:center;height:auto">
-                            <img src="../../images/sub/img_golfzon_10.png" alt="메인 중앙" />
+                            <img src="../../images/sub/img_app2.jpg" alt="메인 중앙" />
                         </div>
-                        <div class="practice_info_wrap" style="width:100%">
-                            <dl style="width:100%">
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />이벤트/대회 스폰서십 진행시 서비스 제공</dt>
+                        <div class="practice_info_wrap w50">
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />4주 1,500만원 / 2주 800만원</dt>
+                            </dl>
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />CTR 0.16% (23년 1-2월 기준)</dt>
                             </dl>
                         </div>
                     </div>
                 </div><!--// tab2 -->
                 <div id="tab3" class="tab_content">
                     <div class="tab1_content">
-                        <h3>이벤트 리스트</h3>
+                        <h3>스크린 메인 중앙</h3>
                         <div class="movie_wrap" style="overflow:hidden;text-align:center;height:auto">
-                            <img src="../../images/sub/img_golfzon_11.png" alt="이벤트 리스트" />
+                            <img src="../../images/sub/img_app3.jpg" alt="스크린 메인 중앙" />
                         </div>
-                        <div class="practice_info_wrap" style="width:100%">
-                            <dl style="width:100%">
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />이벤트/대회 스폰서십 진행시 서비스 제공</dt>
+                        <div class="practice_info_wrap w50">
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />4주 1,300만원 / 2주 700만원</dt>
+                            </dl>
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />CTR 0.1% (23년 1-2월 기준)</dt>
                             </dl>
                         </div>
                     </div>
                 </div><!--// tab3 -->
                 <div id="tab4" class="tab_content">
                     <div class="tab1_content">
-                        <h3>이벤트 페이지</h3>
+                        <h3>필드 메인 중앙</h3>
                         <div class="movie_wrap" style="overflow:hidden;text-align:center;height:auto">
-                            <img src="../../images/sub/img_golfzon_12.png" alt="이벤트 페이지" />
+                            <img src="../../images/sub/img_app4.jpg" alt="필드 메인 중앙" />
                         </div>
-                        <div class="practice_info_wrap" style="width:100%">
-                            <dl style="width:100%">
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />이벤트/대회 스폰서십 진행시 서비스 제공</dt>
+                        <div class="practice_info_wrap w50">
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />4주 1,000만원 / 2주 600만원</dt>
+                            </dl>
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />CTR 0.01% (23년 1-2월 기준)</dt>
                             </dl>
                         </div>
                     </div>
                 </div><!--// tab4 -->
+                <div id="tab5" class="tab_content">
+                    <div class="tab1_content">
+                        <h3>스크린 로그인 스킨</h3>
+                        <div class="movie_wrap" style="overflow:hidden;text-align:center;height:auto">
+                            <img src="../../images/sub/img_app5.jpg" alt="스크린 로그인 스킨" />
+                        </div>
+                        <div class="practice_info_wrap w50">
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />2023년 완판</dt>
+                            </dl>
+                        </div>
+                    </div>
+                </div><!--// tab5 -->
+                <div id="tab6" class="tab_content">
+                    <div class="tab1_content">
+                        <h3>모바일 푸시 + 이벤트 페이지</h3>
+                        <div class="movie_wrap" style="overflow:hidden;text-align:center;height:auto">
+                            <img src="../../images/sub/img_app6.jpg" alt="모바일 푸시 + 이벤트 페이지" />
+                        </div>
+                        <div class="practice_info_wrap">
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />푸시 알림 월 1회 발송</dt>
+                            </dl>
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />이벤트 하단 광고</dt>
+                            </dl>
+                            <dl>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />페이지 1개월 노출</dt>
+                            </dl>
+                        </div>
+                    </div>
+                </div><!--// tab6 -->
             </div>
             </div>  
         </div>
