--- a/sub/golfzon/web.html
+++ b/sub/golfzon/web.html
@@ -10,7 +10,12 @@
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/sub.css?v=1.0">
 </head>
-<body>  
+<body>
+<script>
+jQuery(function($){
+    location.href = '/main.html';
+})
+</script>
     <div id="wrap">
         <div class="header_wrap_on nav_on">
             <div class="util_nav_wrap">
@@ -29,9 +34,9 @@
                         <ul>
                             <li><a href="../screen/practice.html">스크린 광고</a></li>
                             <li><a href="../eventship/event.html">이벤트/대회 스폰서십</a></li>
-                            <li><a href="../golfzon/web.html" style="font-weight:bold;color:#f3982a">골프존닷컴</a></li>
+                            <li><a href="../golfzon/app.html" style="font-weight:bold;color:#f3982a">골프존닷컴</a></li>
                             <li><a href="../marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
-                            <li><a href="../addzone/addzone.html">광고지면</a></li>
+                            <!-- <li><a href="../addzone/addzone.html">광고지면</a></li> -->
                             <li><a href="../partnership/partnership.html">골프장 제휴</a></li>
                         </ul>
                     </div>
@@ -53,7 +58,7 @@
                     </div>
                     <div class="nav3_on">
                         <ul class="nav3_on">
-                            <li><a href="../golfzon/web.html" style="font-weight:bold;color:#f3982a">Web 광고</a></li>
+                            <!-- <li><a href="../golfzon/web.html" style="font-weight:bold;color:#f3982a">Web 광고</a></li> -->
                             <li><a href="../golfzon/app.html">APP 광고</a></li>
                         </ul>
                     </div>
