--- a/sub/screen/practice.html
+++ b/sub/screen/practice.html
@@ -29,9 +29,9 @@
                         <ul>
                             <li><a href="../screen/practice.html" style="font-weight:bold;color:#f3982a">스크린 광고</a></li>
                             <li><a href="../eventship/event.html">이벤트/대회 스폰서십</a></li>
-                            <li><a href="../golfzon/web.html">골프존닷컴</a></li>
+                            <li><a href="../golfzon/app.html">골프존닷컴</a></li>
                             <li><a href="../marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
-                            <li><a href="../addzone/addzone.html">광고지면</a></li>
+                            <!-- <li><a href="../addzone/addzone.html">광고지면</a></li> -->
                             <li><a href="../partnership/partnership.html">골프장 제휴</a></li>
                         </ul>
                     </div>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="nav3_on">
                         <ul class="nav3_on">
-                            <li><a href="../golfzon/web.html">Web 광고</a></li>
+                            <!-- <li><a href="../golfzon/web.html">Web 광고</a></li> -->
                             <li><a href="../golfzon/app.html">APP 광고</a></li>
                         </ul>
                     </div>
