--- a/sub/partnership/partnership.html
+++ b/sub/partnership/partnership.html
@@ -115,6 +115,36 @@
                             <h3><span>03</span>스크린골프와 필드골프 혼용 시대!</h3>
                             <div><img src="../../images/sub/img_partnership_info_3.png" alt="" /></div>
                         </div>
+                        <style>
+                        .qna{
+                            width: 1142px;
+                            margin: 0 auto 100px;
+                        }
+                        .qna ul{
+                            font-size: 0;
+                            margin: -40px -20px 0;
+                        }
+                        .qna li{
+                            display: inline-block;
+                            width: 50%;
+                            vertical-align: top;
+                            padding: 40px 20px 0;
+                            box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;-o-box-sizing: border-box;
+                        }
+                        .qna div{}
+                        .qna p{}
+                        .qna p img{
+                            width: 100%;
+                        }
+                        </style>
+                        <div class="qna">
+                            <ul>
+                                <li><div><p><img src="../../images/sub/qna1.jpg" alt="qna"></p></div></li>
+                                <li><div><p><img src="../../images/sub/qna2.jpg" alt="qna"></p></div></li>
+                                <li><div><p><img src="../../images/sub/qna3.jpg" alt="qna"></p></div></li>
+                                <li><div><p><img src="../../images/sub/qna4.jpg" alt="qna"></p></div></li>
+                            </ul>
+                        </div>
                         <div style="width:100%;background:#f3f7fa;padding:150px 0">
                             <div class="partnership_info_wrap">
                                 <h2>골퍼를 타겟으로<br />골프존의 다양한 광고 영역을 통해 신규 코스를 홍보합니다.</h2>
@@ -133,11 +163,57 @@
                             <p class="sub_text_p">골프장 이용권을 시상품으로 사용하여 대회 참여 후 골프장 내장으로 연계될 수 있도록 이벤트 진행</p>
                             <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_6.png" alt="" /></div>
                         </div>
+                        <div style="width:100%;background:#f3f7fa;padding:150px 0">
+                            <div class="partnership_info_wrap">
+                                <h2 style="margin-bottom: 50px;">신규 코스 런칭 이후 주요 사례</h2>
+                                <div class="round-title">
+                                    <span class="num">01</span>
+                                    <p class="title">
+                                        신규오픈 골프장 홍보 극대화
+                                    </p>
+                                    <p class="text">
+                                        신규 오픈 시 월 평균 15만 라운드 이상 노출
+                                    </p>
+                                </div>
+                                <div><img src="../../images/sub/img_partnership_info_41.jpg" alt="" /></div>
+                                <div class="round-title">
+                                    <span class="num">02</span>
+                                    <p class="title">
+                                        3D 영상 및 이미지 홈페이지 코스소개 활용
+                                    </p>
+                                    <p class="text">
+                                        해비치 제주, 라싸, 스프링데일, 더골프클럽, 소피아그린, 신원 등
+                                    </p>
+                                </div>
+                                <div><img src="../../images/sub/img_partnership_info_42.jpg" style="width: 1142px;" alt="" /></div>
+                                <div class="round-title">
+                                    <span class="num">03</span>
+                                    <p class="title">
+                                        사전 골프존에서 연습 후 실제 코스 내장 확대
+                                    </p>
+                                    <p class="text">
+                                        지속적인 내장객 확대와 홍보효과 인증
+                                    </p>
+                                </div>
+                                <div><img src="../../images/sub/img_partnership_info_44.png" style="width: 1142px;" alt="" /></div>
+                                <div><img src="../../images/sub/img_partnership_info_43.jpg" style="width: 1142px;" alt="" /></div>
+                                <div class="round-title">
+                                    <span class="num">04</span>
+                                    <p class="title">
+                                        스크린과 공동 프로모션 진행
+                                    </p>
+                                    <p class="text">
+                                        골프장 홍보와 프로모션을 동시에 진행 하여 내장객 전환 유도
+                                    </p>
+                                </div>
+                                <div><img src="../../images/sub/img_partnership_info_45.jpg" style="width: 1142px;" alt="" /></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="customer" style="margin-bottom:0;margin-top:200px">
                         <div class="phone">
                             <div style="margin:100px 0 0 340px;color:white">
-                                <p style="font-size:30px;font-weight:bold;line-height:35px">홍보의 시작!<br />골프존이 함께합니다.</p>
+                                <p style="font-size:30px;font-weight:bold;line-height:35px">골프장 홍보의 시작!<br />골프존이 함께합니다.</p>
                                 <p style="margin-top:20px">
                                     <img src="../../images/main/ico_mail.png" alt="" style="vertical-align:middle;margin-right:5px" />
                                     <a href="mailto:golfcc@golfzon.com" style="color:white;font-size:16px;font-family:'Montserrat' !important;">
@@ -146,8 +222,8 @@
                                 </p>
                                 <div style="margin-top:70px">
                                     <p style="font-size:19px;margin-bottom:20px;font-family:'Montserrat' !important;">Hot Line</p>
-                                    <p style="font-size:35px;margin-bottom:10px;font-family:'Montserrat' !important;">070-8660-3937</p>
-                                    <p style="font-size:35px;font-family:'Montserrat' !important;">070-8660-3982</p>
+                                    <p style="font-size:35px;margin-bottom:10px;font-family:'Montserrat' !important;">070-8640-3937</p>
+                                    <p style="font-size:35px;font-family:'Montserrat' !important;">070-8640-3932</p>
                                 </div>
                             </div>
                         </div>
@@ -166,48 +242,72 @@
                     <div class="tab2_content">
                         <div class="sub_title">
                             <h2>골프장 제휴현황</h2>
-                            <span>전국 215개의 골프장이 골프존과 함께 하고 있습니다.</span>
-                            <span style="font-size:15px;color:#252525;margin-top:20px">(*투비전 시스템 서비스 기준 / 2020.07.10 기준)</span>
-                            <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_7.png" alt="" /></div>
+                            <span>현재 골프존에는 전국 330개의 골프 코스가 제휴를 통해 서비스 되고 있습니다.</span>
+                            <!-- <span style="font-size:15px;color:#252525;margin-top:20px">(*투비전 시스템 서비스 기준 / 2020.07.10 기준)</span> -->
+                            <div style="margin-top:100px"><img src="../../images/sub/amblum.jpg" alt="" /></div>
                         </div>
                     </div>
                 </div><!--// tab2 -->
                 <div id="tab3" class="tab_content">
                     <div class="tab3_content">
                         <div class="sub_title">
-                            <h2>항공 촬영 사진 제공</h2>
-                            <span>골프장에서 활용 가능한 3D 드론 항공촬영 사진 제공</span>
-                            <div style="margin-top:60px;margin-bottom:135px"><img src="../../images/sub/img_partnership_info_8.png" alt="" /></div>
+                            <h2>3D 코스 영상/ 홀이미지 무상 제공</h2>
+                            <span>실제 코스를 바탕으로 제작한 3D 코스 영상과 홀이미지를 제공</span>
+                            <div style="margin-top:60px;margin-bottom:50px"><img src="../../images/sub/img_partnership_info_8.png" alt="" style="width: 768px" /></div>
+                            <iframe width="768" height="540" src="https://www.youtube.com/embed/GiPKQrfwgwI" frameborder="0" 
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin-bottom: 100px;"></iframe>
                             <h2>3D 영상 및 이미지 제공</h2>
                             <span>18번홀 홀별 3D 버디뷰 및 클럽하우스 버디뷰 제공<br />홀별 코스 이미지 제공, 골프장 홈페이지 외 홍보 활용 가능</span>
                             <div style="margin-top:60px;margin-bottom:20px"><img src="../../images/sub/img_partnership_info_9.png" alt="" /></div>
-                            <iframe width="768" height="540" src="https://www.youtube.com/embed/GiPKQrfwgwI" frameborder="0" 
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div style="width:100%;background:#f3f7fa;padding:150px 0">
                             <div class="partnership_info_wrap">
-                                <h2>골프장 홍보</h2>
+                                <h2 class="tt">
+                                    신규 오픈과 동시에 <strong style="color: #006eb7;">골프존 인프라를 활용</strong>한 <br><strong style="color: #006eb7;">폭넓은 홍보/마케팅을 제공</strong>합니다.
+                                </h2>
                                 <p class="sub_text_p">골프존 시뮬레이터/웹/앱을 통한 코스 홍보</p>
-                                <h3 style="margin-top:130px"><span>01</span>골프존 시뮬레이터 - 로딩창이미지 코스 오픈 사전 홍보</h3>
-                                <div><img src="../../images/sub/img_partnership_info_10.png" alt="" /></div>
-                                <h3><span>02</span>골프존 시뮬레이터 - 신규코스 탭</h3>
-                                <div><img src="../../images/sub/img_partnership_info_11.png" alt="" /></div>
-                                <h3><span>03</span>골프존 닷컴</h3>
-                                <div><img src="../../images/sub/img_partnership_info_12.png" alt="" /></div>
-                                <h3><span>04</span>골프존 앱</h3>
-                                <div><img src="../../images/sub/img_partnership_info_13.png" alt="" /></div>
+                                <div class="round-title blue">
+                                    <span class="num">01</span>
+                                    <p class="title">
+                                        신규 코스 홍보 진행
+                                    </p>
+                                    <p class="text">
+                                        라운드 중 노출되는 광고를 통해 골프장 브랜딩 노출 효과 상승 (노출량 : 약 350만 IMP)
+                                    </p>
+                                </div>
+                                <div><img src="../../images/sub/benefit11.jpg" style="width: 1142px;" alt="" /></div>
+                                <div class="round-title blue">
+                                    <span class="num">02</span>
+                                    <p class="title">
+                                        3D 코스 내 홍보물 영역 제공
+                                    </p>
+                                    <p class="text">
+                                        제휴 코스 내 A보드, 오브젝트를 통해 추가로 자사제품 및 프로모션 홍보를 제공
+                                    </p>
+                                </div>
+                                <div><img src="../../images/sub/benefit12.jpg" alt="" /></div>
+                                <div class="round-title blue">
+                                    <span class="num">03</span>
+                                    <p class="title">
+                                        3D 코스 내 홍보물 영역 제공
+                                    </p>
+                                    <p class="text">
+                                        제휴 코스 내 A보드, 오브젝트를 통해 추가로 자사제품 및 프로모션 홍보를 제공
+                                    </p>
+                                </div>
+                                <div><img src="../../images/sub/benefit13.jpg" alt="" /></div>
+                                <div class="round-title blue">
+                                    <span class="num">04</span>
+                                    <p class="title">
+                                        골프존의 다양한 매체를 통한 홍보
+                                    </p>
+                                    <p class="text">
+                                        골프존 웹/앱, 스크린 골프 매거진, 스크린 골프존 홍보 등 다양한 매체를 통해 골프장 노출을 제공
+                                    </p>
+                                </div>
+                                <div><img src="../../images/sub/benefit14.jpg" alt="" /></div>
                             </div>
                         </div>
-                            <div class="partnership_info_wrap" style="margin-top:100px">
-                                <h2>신규 런칭 코스를 위한 다양한 이벤트 및 대회 기획</h2>
-                                <p class="sub_text_p">골프장 홍보 뿐 아니라 내장객 증가로 이어질 수 있도로 대회 기획</p>
-                                <h3 style="margin-top:130px"><span>사례</span>2020 썸머 골프장 챔피언십</h3>
-                                <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_14.png" alt="" /></div>
-                                <h3 style="margin-top:130px"><span>사례</span>연습은 스크린에서 이벤트</h3>
-                                <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_15.png" alt="" /></div>
-                                <h3 style="margin-top:130px"><span>사례</span>까스텔바작 럭키박스 이벤트</h3>
-                                <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_16.png" alt="" /></div>
-                            </div>
                     </div>
                 </div><!--// tab3 -->
                 <div id="tab4" class="tab_content">
