--- a/main.html
+++ b/main.html
@@ -148,7 +148,7 @@
                     <div class="ad6_list">
                         <div>
                             <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
-                                <img src="images/main/main_img_ad1.jpg" alt="골든블루" />
+                                <img src="./images/main/main_img_ad1.jpg" alt="골든블루" />
                             </a>
                             <h3>골든블루</h3>
                             <p>#스크린광고</p>
@@ -157,7 +157,7 @@
                         </div>
                         <div>
                             <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
-                                <img src="images/main/main_img_ad2.jpg" alt="석교상사" />
+                                <img src="./images/main/main_img_ad2.jpg" alt="석교상사" />
                             </a>
                             <h3>석교상사</h3>
                             <p>#스크린광고</p>
@@ -167,7 +167,7 @@
                         </div>
                         <div>
                             <a href="sub/marketingsolution/marketing.html#e2" class="innerborder">
-                                <img src="images/main/main_img_ad3.jpg" alt="하이트진로" />
+                                <img src="./images/main/main_img_ad3.jpg" alt="하이트진로" />
                             </a>
                             <h3>하이트진로</h3>
                             <p>#배틀존</p>
@@ -179,7 +179,7 @@
                     <div class="ad6_list">
                         <div>
                             <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
-                                <img src="images/main/main_img_ad4.jpg" alt="신한투자증권" />
+                                <img src="./images/main/main_img_ad4.jpg" alt="신한투자증권" />
                             </a>
                             <h3>신한투자증권</h3>
                             <p>#기업 PR</p>
@@ -191,7 +191,7 @@
                         </div>
                         <div>
                             <a href="sub/marketingsolution/marketing.html#e2" class="innerborder">
-                                <img src="images/main/main_img_ad5.jpg" alt="던롭스포츠" />
+                                <img src="./images/main/main_img_ad5.jpg" alt="던롭스포츠" />
                             </a>
                             <h3>던롭스포츠</h3>
                             <p>#모바일광고</p>
@@ -201,7 +201,7 @@
                         </div>
                         <div>
                             <a href="sub/marketingsolution/marketing.html#e3" class="innerborder">
-                                <img src="images/main/main_img_ad6.jpg" alt="한화생명보험" />
+                                <img src="./images/main/main_img_ad6.jpg" alt="한화생명보험" />
                             </a>
                             <h3>한화생명보험</h3>
                             <p>#모바일광고</p>
@@ -236,19 +236,19 @@
                             <div class="swiper-container">
                                 <div class="swiper-wrapper">
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="images/main/img_ad_slide1.png" alt="img1" style="width:100%" />
+                                    <img src="./images/main/img_ad_slide1.png" alt="img1" style="width:100%" />
                                     <p>전 or 후반홀 시작시 15초 영상<br /><b><span>전후반 홀 입장 동영상 광고</span></b></p>
                                   </div>
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="images/main/img_ad_slide2.png" alt="img1" style="width:100%" />
+                                    <img src="./images/main/img_ad_slide2.png" alt="img1" style="width:100%" />
                                     <p>2020년 2월, 올해 전 기간 완판<br /><b><span>연습장 대형 광고 보드</span></b></p>
                                   </div>
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="images/main/img_ad_slide3.png" alt="img1"  style="width:100%" />
+                                    <img src="./images/main/img_ad_slide3.png" alt="img1"  style="width:100%" />
                                     <p>예상 노출량 최고, 월 평균 2,300만 VIEW<br /><b><span>나의스윙모습 스킨 광고</span></b></p>
                                   </div>
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="images/main/img_ad_slide4.png" alt="img1"  style="width:100%" />
+                                    <img src="./images/main/img_ad_slide4.png" alt="img1"  style="width:100%" />
                                     <p>업계 유일 동영상 6초 + 이미지 4초<br /><b><span>홀 이동 동영상 광고세트</span></b></p>
                                   </div>
                                 </div>
@@ -282,19 +282,19 @@
                             <div class="swiper-container">
                                 <div class="swiper-wrapper">
                                   <div class="swiper-slide" style="width:632px">
-                                    <img src="images/main/img_ad_slide11.png" alt="img1" style="width:100%" />
+                                    <img src="./images/main/img_ad_slide11.png" alt="img1" style="width:100%" />
                                     <!--<p>브랜딩은 물론 퍼포먼스까지!<br /><span>풍선(오브젝트) 이벤트</span></p>-->
                                   </div>
                                   <div class="swiper-slide" style="width:632px">
-                                    <img src="images/main/img_ad_slide22.png" alt="img1" style="width:100%" />
+                                    <img src="./images/main/img_ad_slide22.png" alt="img1" style="width:100%" />
                                     <!--<p>브랜딩은 물론 퍼포먼스까지!<br /><span>풍선(오브젝트) 이벤트</span></p>-->
                                   </div>
                                   <div class="swiper-slide" style="width:632px">
-                                    <img src="images/main/img_ad_slide33.png" alt="img1" style="width:100%" />
+                                    <img src="./images/main/img_ad_slide33.png" alt="img1" style="width:100%" />
                                     <!--<p>브랜딩은 물론 퍼포먼스까지!<br /><span>풍선(오브젝트) 이벤트</span></p>-->
                                   </div>
                                   <div class="swiper-slide" style="width:632px">
-                                    <img src="images/main/img_ad_slide44.png" alt="img1" style="width:100%" />
+                                    <img src="./images/main/img_ad_slide44.png" alt="img1" style="width:100%" />
                                     <!--<p>브랜딩은 물론 퍼포먼스까지!<br /><span>풍선(오브젝트) 이벤트</span></p>-->
                                   </div>
                                 </div>
@@ -343,7 +343,7 @@
                     <div style="margin:100px 0 0 340px;color:white">
                         <p style="font-size:30px;font-weight:bold;line-height:35px">골프존 광고 전문가들이 목적에<br />적합한 마케팅 솔루션을 설계해 드립니다.</p>
                         <p style="margin-top:20px">
-                            <img src="images/main/ico_mail.png" alt="" style="vertical-align:middle;margin-right:5px" />
+                            <img src="./images/main/ico_mail.png" alt="" style="vertical-align:middle;margin-right:5px" />
                             <a href="mailto:adcenter@golfzon.com" style="color:white;font-size:16px;font-family:'Montserrat' !important;">
                                 adcenter@golfzon.com
                             </a>
@@ -357,14 +357,14 @@
                 </div>
                 <div class="cs">
                     <a href="https://www.golfzon.com/customer/inquiry/advertisement" target="_blank">
-                        <img src="images/main/img_cs.png" alt="" />
+                        <img src="./images/main/img_cs.png" alt="" />
                     </a>
                 </div>
             </div>
             <!-- customer -->
             <div class="faq_wrap">
                 <div class="faq">
-                    <h2>FAQ<span><a href="./sub/cs/faq.html"><img src="images/main/btn_faq_view.png" alt="faq 페이지이동" /></a></span></h2>
+                    <h2>FAQ<span><a href="./sub/cs/faq.html"><img src="./images/main/btn_faq_view.png" alt="faq 페이지이동" /></a></span></h2>
                     <div>
                         <dl>
                             <dt>
@@ -433,13 +433,13 @@
                     <p class="copyright">Copyright (c) GOLFZON. All rights reserved.</p>
                 </div>
                 <div>
-                    <img src="images/main/img_footer_img.png" alt="골프존" />
+                    <img src="./images/main/img_footer_img.png" alt="골프존" />
                 </div>
             </div>
         </div>
         <div class="scrollmenu_wrap" id="floatMenu">
             <ul>
-                <li class="scr1"><a href="https://www.golfzon.com/customer/inquiry/advertisement" target="_blank"><img src="images/main/img_scrollmenu1_1.png" alt="문의하기" /><span>&nbsp;&nbsp;문의하기</span></a></li>
+                <li class="scr1"><a href="https://www.golfzon.com/customer/inquiry/advertisement" target="_blank"><img src="./images/main/img_scrollmenu1_1.png" alt="문의하기" /><span>&nbsp;&nbsp;문의하기</span></a></li>
                 <!--<li class="scr2" style="margin-bottom:0"><a href="sub/partnership/partnership.html"><p>제휴</p>
                     <span style="display:none;">골프장 제휴<img src="images/main/ico_side.png" style="vertical-align:middle;margin-left:10px" /></span></a>
                 </li>-->
