--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -238,9 +238,9 @@
                                             <img src="../../images/sub/mt8.jpg" />
                                             <div class="marketing_info_text">
                                                 <h2>석교상사</h2>
-                                                <p>브리지스톤골프
+                                                <p>브리지스톤골프<br>
                                                 
-                                                골프존 메인 광고 상품을 활용하여
+                                                골프존 메인 광고 상품을 활용하여<br>
                                                 골프 토털 브랜드로서의 포지셔닝</p>
                                                 <span>MORE</span>
                                             </div>
@@ -638,13 +638,13 @@
                                 <div class="swiper mySwiper2" style="width:830px;margin:100px auto 0 auto;text-align: center;">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_31.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_31.JPG" alt="img1" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_32.JPG" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_32.jpg" alt="img1" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_33.JPG" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_33.jpg" alt="img1" />
                                         </div>
                                     </div>
                                     <div class="swiper-button-next"></div>
@@ -709,13 +709,13 @@
                                 <div class="swiper mySwiper2" style="width:830px;margin:100px auto 0 auto;text-align: center;">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_41.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_41.JPG" alt="img1" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_42.JPG" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_42.jpg" alt="img1" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_43.JPG" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_43.jpg" alt="img1" />
                                         </div>
                                     </div>
                                     <div class="swiper-button-next"></div>
@@ -738,7 +738,7 @@
                             <div style="clear:both;">
                                 <h1>하이트진로</h1>
                                 <h2>
-                                    대한민국 대표 소주 참이슬
+                                    대한민국 대표 소주 참이슬<br>
                                     대결의 즐거움 배틀존 서비스를 활용한 커뮤니케이션 전략
                                 </h2>
                                 <p class="pop_text">#배틀존&nbsp;&nbsp;#브랜드커뮤니케이션&nbsp;&nbsp;#오브젝트이벤트&nbsp;&nbsp;#매장홍보포스터</p>
@@ -1070,13 +1070,13 @@
                                 <div class="swiper mySwiper2" style="width:830px;margin:100px auto 0 auto;text-align: center;">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_81.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_81.JPG" alt="img1" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_82.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_82.JPG" alt="img1" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_83.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_83.JPG" alt="img1" />
                                         </div>
                                     </div>
                                     <div class="swiper-button-next"></div>
