--- a/sub/partnership/partnership.html
+++ b/sub/partnership/partnership.html
@@ -112,8 +112,6 @@
                             <div><img src="../../images/sub/img_partnership_info_1.png" alt="" /></div>
                             <h3><span>02</span>국내 최대 스크린골프 운영사</h3>
                             <div><img src="../../images/sub/img_partnership_info_2.png" alt="" /></div>
-                            <h3><span>03</span>스크린골프와 필드골프 혼용 시대!</h3>
-                            <div><img src="../../images/sub/img_partnership_info_3.png" alt="" /></div>
                         </div>
                         <style>
                         .qna{
@@ -145,7 +143,7 @@
                                 <li><div><p><img src="../../images/sub/qna4.jpg" alt="qna"></p></div></li>
                             </ul>
                         </div>
-                        <div style="width:100%;background:#f3f7fa;padding:150px 0">
+                        <!-- <div style="width:100%;background:#f3f7fa;padding:150px 0">
                             <div class="partnership_info_wrap">
                                 <h2>골퍼를 타겟으로<br />골프존의 다양한 광고 영역을 통해 신규 코스를 홍보합니다.</h2>
                                 <p class="sub_text_p">골프존 시뮬레이터/웹/앱 광고영역에 골프장 신규 코스가 노출됩니다.</p>
@@ -154,16 +152,7 @@
                                 <h3><span>사례</span>라싸 GC (2020.05.19 런칭)</h3>
                                 <div><img src="../../images/sub/img_partnership_info_5.png" alt="" /></div>
                             </div>
-                        </div>
-                        <div class="partnership_info_wrap" style="margin-top:150px">
-                            <h2>이벤트/대회 기획을 통해<br />
-                                골프장 홍보 및 필드 라운드까지 연계될 수 있도록<br />
-                                다양한 마케팅 활동을 전개합니다.</h2>
-                            <h3 style="margin-top:130px"><span>사례</span>2020 썸머 골프장 챔피언십</h3>
-                            <p class="sub_text_p">골프장 이용권을 시상품으로 사용하여 대회 참여 후 골프장 내장으로 연계될 수 있도록 이벤트 진행</p>
-                            <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_6.png" alt="" /></div>
-                        </div>
-                        <div style="width:100%;background:#f3f7fa;padding:150px 0">
+                        </div> --><div style="width:100%;background:#f3f7fa;padding:150px 0">
                             <div class="partnership_info_wrap">
                                 <h2 style="margin-bottom: 50px;">신규 코스 런칭 이후 주요 사례</h2>
                                 <div class="round-title">
@@ -209,6 +198,14 @@
                                 <div><img src="../../images/sub/img_partnership_info_45.jpg" style="width: 1142px;" alt="" /></div>
                             </div>
                         </div>
+                        <div class="partnership_info_wrap" style="margin-top:150px">
+                            <h2>이벤트/대회 기획을 통해<br />
+                                골프장 홍보 및 필드 라운드까지 연계될 수 있도록<br />
+                                다양한 마케팅 활동을 전개합니다.</h2>
+                            <h3 style="margin-top:130px"><span>사례</span>2020 썸머 골프장 챔피언십</h3>
+                            <p class="sub_text_p">골프장 이용권을 시상품으로 사용하여 대회 참여 후 골프장 내장으로 연계될 수 있도록 이벤트 진행</p>
+                            <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_6.png" alt="" /></div>
+                        </div>
                     </div>
                     <div class="customer" style="margin-bottom:0;margin-top:200px">
                         <div class="phone">
@@ -244,16 +241,20 @@
                             <h2>골프장 제휴현황</h2>
                             <span>현재 골프존에는 전국 330개의 골프 코스가 제휴를 통해 서비스 되고 있습니다.</span>
                             <!-- <span style="font-size:15px;color:#252525;margin-top:20px">(*투비전 시스템 서비스 기준 / 2020.07.10 기준)</span> -->
-                            <div style="margin-top:100px"><img src="../../images/sub/amblum.jpg" alt="" /></div>
+                            <div style="margin-top:70px"><img src="../../images/sub/amblum.jpg" alt="" style="border: 10px solid #ececec;" /></div>
                         </div>
                     </div>
                 </div><!--// tab2 -->
                 <div id="tab3" class="tab_content">
                     <div class="tab3_content">
                         <div class="sub_title">
+                            <h2 class="tt" style="margin-bottom: 20px;font-size: 24px;line-height: 1.4;">
+                                제작 시 만들어지는 <strong style="color: #006eb7;">모든 자료들은</strong><br>
+                                골프장에서 <strong style="color: #006eb7;">다양하게 사용 될 수 있도록 제공</strong>합니다.
+                            </h2>
                             <h2>3D 코스 영상/ 홀이미지 무상 제공</h2>
                             <span>실제 코스를 바탕으로 제작한 3D 코스 영상과 홀이미지를 제공</span>
-                            <div style="margin-top:60px;margin-bottom:50px"><img src="../../images/sub/img_partnership_info_8.png" alt="" style="width: 768px" /></div>
+                            <div style="margin-top:60px;margin-bottom:50px"><img src="../../images/sub/img_partnership_info_8.png" alt="" /></div>
                             <iframe width="768" height="540" src="https://www.youtube.com/embed/GiPKQrfwgwI" frameborder="0" 
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin-bottom: 100px;"></iframe>
                             <h2>3D 영상 및 이미지 제공</h2>
@@ -262,10 +263,11 @@
                         </div>
                         <div style="width:100%;background:#f3f7fa;padding:150px 0">
                             <div class="partnership_info_wrap">
-                                <h2 class="tt">
-                                    신규 오픈과 동시에 <strong style="color: #006eb7;">골프존 인프라를 활용</strong>한 <br><strong style="color: #006eb7;">폭넓은 홍보/마케팅을 제공</strong>합니다.
-                                </h2>
-                                <p class="sub_text_p">골프존 시뮬레이터/웹/앱을 통한 코스 홍보</p>
+                                <div class="sub_title">
+                                    <h2 class="tt">
+                                        신규 오픈과 동시에 <strong style="color: #006eb7;">골프존 인프라를 활용</strong>한 <br><strong style="color: #006eb7;">폭넓은 홍보/마케팅을 제공</strong>합니다.
+                                    </h2>
+                                </div>
                                 <div class="round-title blue">
                                     <span class="num">01</span>
                                     <p class="title">
