--- a/main.html
+++ b/main.html
@@ -102,7 +102,7 @@
                             <p>골프존 인프라는 여러분의 광고를<br />보다 빠르고 효과적으로 확산시켜드립니다.</p>
                         </div>
                       </div>
-                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-2.jpg');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
+                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-2.jpg?ver=2');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
                             <p style="margin-top: 20px">경제력이 높은 3050 타겟<br />이용횟수 매일 215,839회(RND)<br><em style="font-size: 14px;line-height: 20px;">*2021년 기준</em></p>
                             <p style="margin-top: 10px">골프존의 프리미엄 타겟은 언제든<br />여러분의 제품과 서비스를 경험할 준비가 되어있습니다.</p>
