--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -890,6 +890,9 @@
                                         <div class="swiper-slide">
                                             <img src="../../images/sub/img_marketing_pop_slide_61.jpg" alt="img1" />
                                         </div>
+                                        <div class="swiper-slide">
+                                            <img src="../../images/sub/img_marketing_pop_slide_62.jpg" alt="img1" />
+                                        </div>
                                     </div>
                                     <div class="swiper-button-next"></div>
                                     <div class="swiper-button-prev"></div>
